Update project 4 snapshot
- Add new image
- Update about me text
- Make Hero text responsive.
- Replace devicons with title versions.

--- a/index.html
+++ b/index.html
@@ -82,14 +82,12 @@
         <div class="col-lg-6 col-sm-12 align-self-center">
           <h3>Hi, I'm Matt...</h3>
           <p class="my-2">
-            I am a software engineer with an eclectic background that spans audio engineering, CRM administration, marketing, and sales. Following a realization that I was seeking out and energized by the most technical aspects of the work I
-            performed, I committed myself to a career through which I am able to fully explore my passion for building, creating, and problem-solving.
+            and I am a marketer-turned-software engineer with several years experience establishing data-driven marketing and business automation systems. In my previous role managing marketing operations, I realized I was energized by the most technical aspects of the work I performed, so I decided to pursue a career in software development.
           </p>
           <p class="my-2">
-            My experience has taught me to enjoy collaboration with numerous personalities and how to harness creativity and
-            leverage passionate energy. I was taught to value a well-crafted story and to know when listening with an open mind is most important. I view problems as opportunities and value disciplined optimization. As I look ahead, I see boundless
-            opportunity to combine the talents I’ve honed these past years and apply them to developing software that is fun, powerful, useful, and valuable.
+            What I've come to enjoy most about programming is how diverse both the challenges and solutions can be. The notion that the product of my labor could be used and enjoyed by so many has been like rocket fuel, and I find myself incredibly excited for every new project that comes my way.
           </p>
+
         </div>
       </div>
     </div>
@@ -113,16 +111,13 @@
         <i class="col-lg-2 col-sm-6 devicon-sass-original"></i>
       </div>
       <div data-aos="slide-up">
-        <i class="col-lg-2 col-sm-6 devicon-bootstrap-plain"></i>
+        <i class="col-lg-2 col-sm-6 devicon-bootstrap-plain-wordmark"></i>
       </div>
       <div data-aos="slide-up">
         <i class="col-lg-2 col-sm-6 devicon-javascript-plain"></i>
       </div>
       <div data-aos="slide-up">
-        <i class="col-lg-2 col-sm-6 devicon-react-original"></i>
-      </div>
-      <div data-aos="slide-up">
-        <i class="col-lg-2 col-sm-6 devicon-nodejs-plain"></i>
+        <i class="col-lg-2 col-sm-6 devicon-react-original-wordmark"></i>
       </div>
       <div data-aos="slide-up">
         <i class="col-lg-2 col-sm-6 devicon-jquery-plain-wordmark"></i>
@@ -140,6 +135,9 @@
         <i class="col-lg-2 col-sm-6 devicon-mongodb-plain-wordmark"></i>
       </div>
       <div data-aos="slide-up">
+        <i class="col-lg-2 col-sm-6 devicon-nodejs-plain"></i>
+      </div>
+      <div data-aos="slide-up">
         <i class="col-lg-2 col-sm-6 devicon-express-original-wordmark"></i>
       </div>
       <div data-aos="slide-up">
@@ -149,7 +147,7 @@
         <i class="col-lg-2 col-sm-6 devicon-grunt-line-wordmark"></i>
       </div>
       <div data-aos="slide-up">
-        <i class="col-lg-2 col-sm-6 devicon-amazonwebservices-original"></i>
+        <i class="col-lg-2 col-sm-6 devicon-amazonwebservices-plain-wordmark"></i>
       </div>
       <div data-aos="slide-up">
         <i class="col-lg-2 col-sm-6 devicon-heroku-line-wordmark"></i>
@@ -158,7 +156,7 @@
         <i class="col-lg-2 col-sm-6 devicon-github-plain-wordmark"></i>
       </div>
       <div data-aos="slide-up">
-        <i class="col-lg-2 col-sm-6 devicon-git-plain"></i>
+        <i class="col-lg-2 col-sm-6 devicon-git-plain-wordmark"></i>
       </div>
     </article>
   </section>
@@ -231,7 +229,7 @@
       </div>
       <div class="row content-reorder">
         <div data-aos="slide-up" class="col-lg-6 col-sm-12 align-self-center">
-          <h3>Pomodoro Task Tracker</h3>
+          <h3>Pomato Task Tracker</h3>
           <p class="my-2">
             Increase your productivity with a simple-to-use task tracker that
             has a built-in <a href="https://en.wikipedia.org/wiki/Pomodoro_Technique" target="_blank">pomodoro timer</a>.
